--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@react-native-community/async-storage": "^1.12.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-localization": "^2.1.6",
-    "react-native-localize": "^2.0.3"
+    "react-native-localize": "^2.0.3",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-wechat-lib": "1.1.25-notpay"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
