--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,5 +21,12 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      <activity
+      android:name=".wxapi.WXEntryActivity"
+      android:label="@string/app_name"
+      android:exported="true"
+      android:taskAffinity="com.daolinwand_gggodlin"
+      android:launchMode="singleTask"
+    />
     </application>
 </manifest>
