--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "i18n-js": "^3.8.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-dropdown-picker": "^4.0.9",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localization": "^2.1.6",
     "react-native-localize": "^2.0.3",
+    "react-native-paper": "^4.8.1",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.1",
