--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-dropdown-picker": "^4.0.9",
+    "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localization": "^2.1.6",
@@ -28,6 +29,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.1",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-walkthrough-tooltip": "^1.2.0",
     "react-native-wechat-lib": "^1.1.26"
   },
   "devDependencies": {
