--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^5.14.4",
     "i18n-js": "^3.8.0",
     "react": "17.0.1",
+    "react-hook-form": "^7.6.0",
     "react-native": "0.64.0",
     "react-native-dropdown-picker": "^4.0.9",
     "react-native-elements": "^3.4.1",
@@ -30,7 +31,8 @@
     "react-native-screens": "^3.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-walkthrough-tooltip": "^1.2.0",
-    "react-native-wechat-lib": "^1.1.26"
+    "react-native-wechat-lib": "^1.1.26",
+    "react-navigation-header-buttons": "^7.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
