--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-dropdown-picker": "^4.0.9",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^3.6.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localization": "^2.1.6",
     "react-native-localize": "^2.0.3",
