--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/image-editor": "^2.3.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.9.4",
@@ -19,13 +20,18 @@
     "react": "17.0.1",
     "react-hook-form": "^7.6.0",
     "react-native": "0.64.0",
+    "react-native-amazing-cropper": "^0.1.6",
     "react-native-dropdown-picker": "^4.0.9",
     "react-native-elements": "^3.4.1",
+    "react-native-exif": "^0.4.0",
+    "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^3.6.0",
+    "react-native-image-rotate": "^2.1.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localization": "^2.1.6",
     "react-native-localize": "^2.0.3",
+    "react-native-modal": "^11.10.0",
     "react-native-paper": "^4.8.1",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
