--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "buffer": "^5.7.1",
     "i18n-js": "^3.8.0",
+    "mqtt": "^4.2.5",
     "react": "17.0.1",
     "react-hook-form": "^7.6.0",
     "react-native": "0.64.0",
@@ -41,11 +43,13 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-walkthrough-tooltip": "^1.2.0",
     "react-native-wechat-lib": "^1.1.26",
-    "react-navigation-header-buttons": "^7.0.1"
+    "react-navigation-header-buttons": "^7.0.1",
+    "react_native_mqtt": "^1.3.1",
+    "url": "^0.11.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
+    "@babel/core": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
